--- a/equi2poly3.html
+++ b/equi2poly3.html
@@ -132,6 +132,7 @@
             <option value="cube">正六面体（6正方）</option>
             <option value="icosa">正二十面体（20三角）</option>
             <option value="truncated">切頂二十面体（12五角+20六角）</option>
+            <option value="rhombicubocta">斜方立方八面体（8三角+18正方）</option>
           </select>
         </div>
         <div style="flex:1; min-width:220px;">
@@ -333,6 +334,54 @@ function icosahedronData(){
   return {V,F};
 }
 
+/* ============================= 斜方立方八面体 ============================= */
+function rhombicuboctahedronData(){
+  // 斜方立方八面体の24頂点（正確な座標）
+  const vertices = [
+    // Group 1: (±1, ±1, 0) の組み合わせ 4点
+    [ 1,  1, 0], [ 1, -1, 0], [-1,  1, 0], [-1, -1, 0],
+    // Group 2: (±1, 0, ±1) の組み合わせ 4点  
+    [ 1, 0,  1], [ 1, 0, -1], [-1, 0,  1], [-1, 0, -1],
+    // Group 3: (0, ±1, ±1) の組み合わせ 4点
+    [0,  1,  1], [0,  1, -1], [0, -1,  1], [0, -1, -1],
+    // Group 4: (±√2, 0, 0) の組み合わせ 2点
+    [ 1.41421, 0, 0], [-1.41421, 0, 0],
+    // Group 5: (0, ±√2, 0) の組み合わせ 2点  
+    [0,  1.41421, 0], [0, -1.41421, 0],
+    // Group 6: (0, 0, ±√2) の組み合わせ 2点
+    [0, 0,  1.41421], [0, 0, -1.41421],
+    // Group 7: 追加の6点
+    [ 0.70711,  0.70711,  0.70711], [ 0.70711,  0.70711, -0.70711],
+    [ 0.70711, -0.70711,  0.70711], [ 0.70711, -0.70711, -0.70711],
+    [-0.70711,  0.70711,  0.70711], [-0.70711,  0.70711, -0.70711]
+  ];
+  
+  // 正規化
+  const V = vertices.map(([x,y,z])=>{
+    const inv = 1/Math.hypot(x,y,z);
+    return [x*inv, y*inv, z*inv];
+  });
+  
+  // 三角形面（8個）
+  const triangles = [
+    [0, 4, 8], [1, 5, 11], [2, 6, 9], [3, 7, 10],
+    [12, 18, 14], [13, 22, 16], [15, 19, 17], [20, 21, 23]
+  ];
+  
+  // 正方形面（18個）
+  const squares = [
+    // 基本的な正方形面
+    [0, 1, 5, 4], [2, 3, 7, 6], [8, 9, 15, 14], [10, 11, 16, 17],
+    [0, 2, 9, 8], [1, 3, 11, 10], [4, 6, 22, 18], [5, 7, 23, 19],
+    [12, 13, 19, 18], [14, 15, 21, 20], [16, 17, 23, 22], [20, 21, 17, 16],
+    // 追加の正方形面
+    [0, 12, 14, 8], [1, 13, 17, 11], [2, 14, 16, 9], [3, 15, 17, 10],
+    [4, 18, 20, 8], [5, 19, 21, 11]
+  ];
+  
+  return {V, triangles, squares};
+}
+
 function renderIcosaFace(equirectData, ew, eh, A, B, C, faceSize){
   const canvas = document.createElement('canvas');
   canvas.width = faceSize; canvas.height = faceSize;
@@ -390,6 +439,11 @@ function convertEquirectToIcosahedron(equirectImage, faceSize){
   });
   return faces;
 }
+
+
+
+
+
 
 /* ============================= 切頂二十面体（データ生成） ============================= */
 function edgeKey(a,b){ return (a<b) ? `${a}_${b}` : `${b}_${a}`; }
@@ -800,6 +854,34 @@ function convertEquirectToTruncatedIcosahedron(equirectImage, faceSize, t=1/3){
   return faces;
 }
 
+/* ============================= 変換エントリ（斜方立方八面体） ============================= */
+function convertEquirectToRhombicuboctahedron(equirectImage, faceSize){
+  const ew = equirectImage.width, eh = equirectImage.height;
+  const tmp = document.createElement('canvas');
+  tmp.width = ew; tmp.height = eh;
+  const tctx = tmp.getContext('2d');
+  tctx.drawImage(equirectImage, 0, 0);
+  const eData = tctx.getImageData(0, 0, ew, eh).data;
+
+  const {V, triangles, squares} = rhombicuboctahedronData();
+  const faces = [];
+
+  // 三角形面（8個）
+  triangles.forEach((tri, i)=>{
+    const A = V[tri[0]], B = V[tri[1]], C = V[tri[2]];
+    const canvas = renderIcosaFace(eData, ew, eh, A, B, C, faceSize);
+    faces.push({name:`tri_${String(i).padStart(2,'0')}`, canvas});
+  });
+
+  // 正方形面（18個）
+  squares.forEach((quad, i)=>{
+    const poly3D = quad.map(idx => V[idx]);
+    const canvas = renderPolyFacePlanar(eData, ew, eh, poly3D, faceSize);
+    faces.push({name:`sq_${String(i).padStart(2,'0')}`, canvas});
+  });
+
+  return faces;
+}
 
 /* ============================= UI ロジック ============================= */
 const el = {
@@ -1180,6 +1262,8 @@ if (type === 'cube'){
     faces = convertEquirectToCube(inputImage, faceSize);
   }else if(type === 'icosa'){
     faces = convertEquirectToIcosahedron(inputImage, faceSize);
+  }else if(type === 'rhombicubocta'){
+    faces = convertEquirectToRhombicuboctahedron(inputImage, faceSize);
   }else{
     const t = Math.max(0.15, Math.min(0.5, parseFloat(el.truncNumber.value||'0.333')));
     faces = convertEquirectToTruncatedIcosahedron(inputImage, faceSize, t);
