--- a/equi2poly3.html
+++ b/equi2poly3.html
@@ -336,24 +336,20 @@ function icosahedronData(){
 
 /* ============================= 斜方立方八面体 ============================= */
 function rhombicuboctahedronData(){
-  // 斜方立方八面体の24頂点（正確な座標）
+  // 斜方立方八面体の24頂点（より正確な座標）
+  const a = 1.0; // 基準長
+  const b = Math.sqrt(2) - 1; // ≈ 0.414
+  
   const vertices = [
-    // Group 1: (±1, ±1, 0) の組み合わせ 4点
-    [ 1,  1, 0], [ 1, -1, 0], [-1,  1, 0], [-1, -1, 0],
-    // Group 2: (±1, 0, ±1) の組み合わせ 4点  
-    [ 1, 0,  1], [ 1, 0, -1], [-1, 0,  1], [-1, 0, -1],
-    // Group 3: (0, ±1, ±1) の組み合わせ 4点
-    [0,  1,  1], [0,  1, -1], [0, -1,  1], [0, -1, -1],
-    // Group 4: (±√2, 0, 0) の組み合わせ 2点
-    [ 1.41421, 0, 0], [-1.41421, 0, 0],
-    // Group 5: (0, ±√2, 0) の組み合わせ 2点  
-    [0,  1.41421, 0], [0, -1.41421, 0],
-    // Group 6: (0, 0, ±√2) の組み合わせ 2点
-    [0, 0,  1.41421], [0, 0, -1.41421],
-    // Group 7: 追加の6点
-    [ 0.70711,  0.70711,  0.70711], [ 0.70711,  0.70711, -0.70711],
-    [ 0.70711, -0.70711,  0.70711], [ 0.70711, -0.70711, -0.70711],
-    [-0.70711,  0.70711,  0.70711], [-0.70711,  0.70711, -0.70711]
+    // 8個の立方体頂点に近い点
+    [ a,  a,  b], [ a, -a,  b], [-a,  a,  b], [-a, -a,  b], // 0-3
+    [ a,  a, -b], [ a, -a, -b], [-a,  a, -b], [-a, -a, -b], // 4-7
+    // 8個の正八面体頂点に近い点
+    [ a,  b,  a], [ a,  b, -a], [-a,  b,  a], [-a,  b, -a], // 8-11
+    [ a, -b,  a], [ a, -b, -a], [-a, -b,  a], [-a, -b, -a], // 12-15
+    // 8個の追加点
+    [ b,  a,  a], [ b,  a, -a], [ b, -a,  a], [ b, -a, -a], // 16-19
+    [-b,  a,  a], [-b,  a, -a], [-b, -a,  a], [-b, -a, -a]  // 20-23
   ];
   
   // 正規化
@@ -362,21 +358,23 @@ function rhombicuboctahedronData(){
     return [x*inv, y*inv, z*inv];
   });
   
-  // 三角形面（8個）
+  // 三角形面（8個） - 正八面体の面に対応
   const triangles = [
-    [0, 4, 8], [1, 5, 11], [2, 6, 9], [3, 7, 10],
-    [12, 18, 14], [13, 22, 16], [15, 19, 17], [20, 21, 23]
+    [0, 8, 16], [1, 12, 18], [2, 10, 20], [3, 14, 22],
+    [4, 9, 17], [5, 13, 19], [6, 11, 21], [7, 15, 23]
   ];
   
-  // 正方形面（18個）
+  // 正方形面（18個） - 立方体の面を切り取った形
   const squares = [
-    // 基本的な正方形面
-    [0, 1, 5, 4], [2, 3, 7, 6], [8, 9, 15, 14], [10, 11, 16, 17],
-    [0, 2, 9, 8], [1, 3, 11, 10], [4, 6, 22, 18], [5, 7, 23, 19],
-    [12, 13, 19, 18], [14, 15, 21, 20], [16, 17, 23, 22], [20, 21, 17, 16],
-    // 追加の正方形面
-    [0, 12, 14, 8], [1, 13, 17, 11], [2, 14, 16, 9], [3, 15, 17, 10],
-    [4, 18, 20, 8], [5, 19, 21, 11]
+    // 上下面
+    [0, 2, 10, 8], [1, 3, 14, 12], [4, 6, 11, 9], [5, 7, 15, 13],
+    // 前後面  
+    [0, 1, 18, 16], [2, 3, 22, 20], [4, 5, 19, 17], [6, 7, 23, 21],
+    // 左右面
+    [0, 4, 17, 16], [1, 5, 19, 18], [2, 6, 21, 20], [3, 7, 23, 22],
+    // 中間面
+    [8, 10, 11, 9], [12, 14, 15, 13], [16, 17, 19, 18], 
+    [20, 21, 23, 22], [8, 9, 17, 16], [10, 11, 21, 20]
   ];
   
   return {V, triangles, squares};
