--- a/equi2poly3.html
+++ b/equi2poly3.html
@@ -1097,6 +1097,22 @@ function gatherEdges(polyType, t=1/3){
         addEdge(V[idx(-1,y,z)], V[idx( 1,y,z)]);
       });
     });
+  } else if (polyType === 'rhombicubocta') {
+    // 斜方立方八面体：三角形/正方形ポリゴンから連続辺
+    const {triangles, squares} = rhombicuboctahedronData();
+    const polyEdges = (poly)=> poly.forEach((p,i)=>{
+      const q = poly[(i+1)%poly.length];
+      addEdge(V[p], V[q]);
+    });
+    const {V} = rhombicuboctahedronData();
+    triangles.forEach(tri => tri.forEach((p,i)=>{
+      const q = tri[(i+1)%3];
+      addEdge(V[p], V[q]);
+    }));
+    squares.forEach(sq => sq.forEach((p,i)=>{
+      const q = sq[(i+1)%4];
+      addEdge(V[p], V[q]);
+    }));
   } else {
     // 切頂二十面体：五角形/六角形ポリゴンから連続辺
     const {pentagons, hexagons} = truncatedIcosahedronData(t);
