--- a/equi2poly3.html
+++ b/equi2poly3.html
@@ -337,17 +337,17 @@ function icosahedronData(){
 /* ============================= 斜方立方八面体 ============================= */
 function rhombicuboctahedronData(){
   // 斜方立方八面体の24頂点（より正確な座標）
-  const a = 1.0; // 基準長
-  const b = Math.sqrt(2) - 1; // ≈ 0.414
+  const a = Math.sqrt(2) / 2.0; // 一辺の半分
+  const b = a + 1.0;
   
   const vertices = [
-    // 8個の立方体頂点に近い点
+    // 前後(z軸方向)の頂点
     [ a,  a,  b], [ a, -a,  b], [-a,  a,  b], [-a, -a,  b], // 0-3
     [ a,  a, -b], [ a, -a, -b], [-a,  a, -b], [-a, -a, -b], // 4-7
-    // 8個の正八面体頂点に近い点
+    // 上下(y軸方向)の頂点
     [ a,  b,  a], [ a,  b, -a], [-a,  b,  a], [-a,  b, -a], // 8-11
     [ a, -b,  a], [ a, -b, -a], [-a, -b,  a], [-a, -b, -a], // 12-15
-    // 8個の追加点
+    // 左右(x軸方向)の頂点
     [ b,  a,  a], [ b,  a, -a], [ b, -a,  a], [ b, -a, -a], // 16-19
     [-b,  a,  a], [-b,  a, -a], [-b, -a,  a], [-b, -a, -a]  // 20-23
   ];
@@ -360,21 +360,17 @@ function rhombicuboctahedronData(){
   
   // 三角形面（8個） - 正八面体の面に対応
   const triangles = [
-    [0, 8, 16], [1, 12, 18], [2, 10, 20], [3, 14, 22],
-    [4, 9, 17], [5, 13, 19], [6, 11, 21], [7, 15, 23]
+    [0, 8, 16], [1, 18, 12], [2, 20, 10], [3, 14, 22],	// tri_00, tri_01, tri_02, tri_03
+    [4, 17, 9], [5, 13, 19], [6, 11, 21], [7, 23, 15]	// tri_04, tri_05, tri_06, tri_07
   ];
   
   // 正方形面（18個） - 立方体の面を切り取った形
   const squares = [
-    // 上下面
-    [0, 2, 10, 8], [1, 3, 14, 12], [4, 6, 11, 9], [5, 7, 15, 13],
-    // 前後面  
-    [0, 1, 18, 16], [2, 3, 22, 20], [4, 5, 19, 17], [6, 7, 23, 21],
-    // 左右面
-    [0, 4, 17, 16], [1, 5, 19, 18], [2, 6, 21, 20], [3, 7, 23, 22],
-    // 中間面
-    [8, 10, 11, 9], [12, 14, 15, 13], [16, 17, 19, 18], 
-    [20, 21, 23, 22], [8, 9, 17, 16], [10, 11, 21, 20]
+    [0, 2, 10, 8], [3, 1, 12, 14], [6, 4, 9, 11], [5, 7, 15, 13],	// sq_00, sq_01, sq_02, sq_03
+    [1, 0, 16, 18], [2, 3, 22, 20], [4, 5, 19, 17], [21, 23, 7, 6],	// sq_04, sq_05, sq_06, sq_07
+    [0, 1, 3, 2], [6, 7, 5, 4], [13, 12, 18, 19], [22, 14, 15, 23],	// sq_08, sq_09, sq_11, sq_12
+    [8, 10, 11, 9], [14, 12, 13, 15], [16, 17, 19, 18], 	// sq_12, sq_13, sq_14
+    [21, 20, 22, 23], [8, 9, 17, 16], [11, 10, 20, 21]		// sq_15, sq_16, sq_17
   ];
   
   return {V, triangles, squares};
@@ -437,11 +433,6 @@ function convertEquirectToIcosahedron(equirectImage, faceSize){
   });
   return faces;
 }
-
-
-
-
-
 
 /* ============================= 切頂二十面体（データ生成） ============================= */
 function edgeKey(a,b){ return (a<b) ? `${a}_${b}` : `${b}_${a}`; }
