--- a/equi2poly3.html
+++ b/equi2poly3.html
@@ -3,9 +3,7 @@
  * 360 Image DEEP HACK Equi2Poly3
  * 
  * @description 360イメージを編集するWebアプリケーション（エクイレクタングラーを多面体に変換）
- * @author いけだじゅんじ (enhanced by Claude, updated by ChatGPT)
- * @version 1.3
- * @date 20250928
+ * @author asari keisuke
  * @license Public Domain - 再配布、改変自由、一切の制限なし
  * @disclaimer 
  *   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND.
@@ -18,11 +16,11 @@
  *
  * 本アプリケーションは JSZip (https://stuk.github.io/jszip/)(MIT License) を利用しています
  * 
+ * ----- CHANGELOG --------------------------------------------------------------------------------
  * v 1.0 リリース
  * v 1.1 正二十面体の各面の形状を修正（）
  * Acknowledgements
  * 正二十面体の各面形状の検証・改善に協力いただいた asari さんに感謝します 🙏
- * CHANGELOG 20250928 
  *
  * v 1.2 ランタイム反転と上下面の向き調整、展開線描画、ZIP/タイル強化（2025-09-06）
  *  - [変換元の扱い] 変換実行時にだけ処理分岐。正六面体はオリジナルをそのまま使用。
@@ -37,14 +35,19 @@
  *     多面体の全エッジを球面補間でサンプリングし、経度またぎを考慮してequirectに描画・保存。
  *  - [出力強化] 生成面の一括ZIP保存(JSZip)／1枚タイル生成と保存（プレビュー付き）を整備。
  *  - [UI/微修正] 品質ラベルのリアルタイム更新、アラート文言調整、内部関数の整理。
- * v 1.3 正八面体の追加
+ * ここまで、https://github.com/ikejun360go/360onWeb/ の20250906版(ver.1.2)
+ *
+ * ここから、asari360jp/360appsとしての修正
+ * ver.20250927 斜方立方八面体の追加
+ * ver.20250930 正八面体の追加 https://github.com/ikejun360go/360onWeb/ より20250927版(ver.1.3)をマージ
+ * ------------------------------------------------------------------------------------------------
  *
  * 既知の注意:
  *  - 大容量画像ではブラウザのメモリ使用量が増えます。保存前プレビューでサイズをご確認ください。
  *  - equirectの極付近では画素密度の関係でにじみが見える場合があります（仕様）。
  *
  * クレジット:
- *  - Code & Design: いけだじゅんじ
+ *  - Base Code & Design: いけだじゅんじ (https://github.com/ikejun360go/360onWeb/)
  *  - Enhanced with: Claude / ChatGPT / Grok（実装提案・バグ修正・最適化）
  *  - Third-party: JSZip (MIT)
  */
@@ -57,7 +60,7 @@
 <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Equirect → Cube / Icosahedron / Truncated Icosahedron Exporter v1.2</title>
+<title>Equirectangular to Polyhedron Exporter</title>
 <style>
   :root{
     --bg1:#1e3c72; --bg2:#2a5298;
@@ -110,7 +113,7 @@
 </head>
 <body>
 <div class="container">
-  <h1>360エクイ → 正六面体／正八面体／正二十面体／カクカク⚽️サッカーボール・切頂二十面体　変換 v1.3 </h1>
+  <h1>360エクイレクタングラー → 多面体　変換</h1>
 
   <div class="row">
     <!-- 入力 -->
