--- a/equi2poly3.html
+++ b/equi2poly3.html
@@ -39,6 +39,7 @@
  *
  * ここから、asari360jp/360appsとしての修正
  * ver.20250927 斜方立方八面体の追加
+ * ver.20250929 正四面体の追加
  * ver.20250930 正八面体の追加 https://github.com/ikejun360go/360onWeb/ より20250927版(ver.1.3)をマージ
  * ------------------------------------------------------------------------------------------------
  *
@@ -133,7 +134,7 @@
         <div style="flex:1; min-width:220px;">
           <label>多面体の種類</label>
           <select id="polyType">
-	        <option value="tetrahedron">正四面体（4三角）</option>
+            <option value="tetrahedron">正四面体（4三角）</option>
             <option value="cube">正六面体（6正方）</option>
             <option value="octa">正八面体（8三角）</option>
             <option value="icosa">正二十面体（20三角）</option>
