--- a/origami_globe_box.html
+++ b/origami_globe_box.html
@@ -1725,7 +1725,15 @@ if (type === 'octa' || type === 'icosa' || type === 'dodecahedron' || type === '
   
   lastFaces = faces;
   lastPoly = type;
-  renderFacesToPanel(faces);
+  
+  // 斜方立方八面体の場合は自動的に展開図を生成
+  if(type === 'rhombicubocta'){
+    generateDoubleLayout(faces);
+  } else {
+    // 他の多面体の場合は従来通り面を表示
+    renderFacesToPanel(faces);
+  }
+  
   el.gridWrap.style.display = 'none';
   el.gridDownload.style.display = 'none';
   el.gridInfo.textContent = '';
