--- a/origami_globe_box.html
+++ b/origami_globe_box.html
@@ -1,10 +1,10 @@
 <!--
 /**
- * 360 Image DEEP HACK Equi2Poly3
+ * asari360jp/360apps/origami_globe_box.html
  * 
- * @description 360イメージを編集するWebアプリケーション（エクイレクタングラーを多面体に変換）
+ * @description 360エクイレクタングラー → 折り紙まんまるボックス　変換
  * @author asari keisuke
- * @license Public Domain - 再配布、改変自由、一切の制限なし
+ * @license 再配布・改変自由ですが、著作権は放棄していません
  * @disclaimer 
  *   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND.
  *   IN NO EVENT SHALL THE AUTHORS BE LIABLE FOR ANY DAMAGES ARISING FROM THE USE OF THIS SOFTWARE.
@@ -43,6 +43,9 @@
  * ver.20250930 正八面体の追加 https://github.com/ikejun360go/360onWeb/ より20250927版(ver.1.3)をマージ
  * ver.20251001 正十二面体の追加
  * ver.20251028 正四面体,斜方立方八面体で変換前の画像反転なしを明示(操作順によって画像反転してしまうバグ修正)
+ *
+ * ここから、asari360jp/360apps/origami_globe_box.htmlとしての修正
+ * ver.20251028 「折り紙まんまるボックス」用画像作成アプリへの修正
  * ------------------------------------------------------------------------------------------------
  *
  * 既知の注意:
@@ -50,6 +53,7 @@
  *  - equirectの極付近では画素密度の関係でにじみが見える場合があります（仕様）。
  *
  * クレジット:
+ *  - 折り方考案: Sweet Paper (https://www.youtube.com/c/SweetPaper/)
  *  - Base Code & Design: いけだじゅんじ (https://github.com/ikejun360go/360onWeb/)
  *  - Enhanced with: Claude / ChatGPT / Grok（実装提案・バグ修正・最適化）
  *  - Third-party: JSZip (MIT)
@@ -63,13 +67,33 @@
 <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Equirectangular to Polyhedron Exporter</title>
+<title>Equirectangular to "Origami Globe Box" Exporter</title>
 <style>
+<!--
   :root{
-    --bg1:#1e3c72; --bg2:#2a5298;
-    --panel: rgba(255,255,255,0.1);
-    --accent:#4CAF50;
+    /* 配色パターン：オリジナル */  
+    --bg1:#1e3c72;      /* 背景グラデーション開始色 */
+    --bg2:#2a5298;      /* 背景グラデーション終了色 */
+    --panel: rgba(255,255,255,0.1);  /* カードの背景色 */
+    --accent:#4CAF50;   /* アクセントカラー（実行ボタンなど） */
   }
+-->
+/* 配色パターン：スレート×クリムゾン（鮮やかな赤） */
+:root{
+  --bg1:#1e1b2e;
+  --bg2:#3d2a3a;
+  --panel: rgba(255,255,255,0.08);
+  --accent:#dc2f02;
+}
+a {
+  color: var(--accent); /* アクセントカラーを使用 */
+  text-decoration: none;
+}
+a:hover {
+  color: #ff4820; /* アクセントより明るい色 */
+  text-decoration: underline;
+}
+  
   body{
     margin:0; padding:20px; color:#fff;
     font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif;
@@ -116,8 +140,11 @@
 </head>
 <body>
 <div class="container">
-  <h1>360エクイレクタングラー → 多面体　変換</h1>
-
+  <h1>360エクイレクタングラー → 折り紙まんまるボックス　変換</h1>
+    <ul>
+      <li><a href="https://www.sweet-paper.net/" target="blank">Sweet Paper</a> さんの <a href="https://www.youtube.com/watch?v=98vaehDMnGE" target="blank">折り紙まんまるボックス</a> 用に画像を展開します</li>
+    </ul>
+  
   <div class="row">
     <!-- 入力 -->
     <div class="card">
