--- a/equi2poly3.html
+++ b/equi2poly3.html
@@ -66,9 +66,18 @@
 <title>Equirectangular to Polyhedron Exporter</title>
 <style>
   :root{
-    --bg1:#1e3c72; --bg2:#2a5298;
-    --panel: rgba(255,255,255,0.1);
-    --accent:#4CAF50;
+    --bg1:#1e3c72;      /* 背景グラデーション開始色 */
+    --bg2:#2a5298;      /* 背景グラデーション終了色 */
+    --panel: rgba(255,255,255,0.1);  /* カードの背景色 */
+    --accent:#4CAF50;   /* アクセントカラー（実行ボタンなど） */
+  }
+  a {
+    color: #eeeeee;
+    text-decoration: none;
+  }
+  a:hover {
+    color: #ffffff;
+    text-decoration: underline;
   }
   body{
     margin:0; padding:20px; color:#fff;
@@ -217,6 +226,13 @@
       <p class="mini">タイルプレビュー：</p>
       <canvas id="gridCanvas" class="grid-preview"></canvas>
     </div>
+  </div>
+</div>
+
+<!-- アプリ一覧へのリンク -->
+<div class="container">
+  <div style="text-align:right; margin-top:20px; font-size:12px; opacity:0.7;">
+    <a href="https://asari360jp.github.io/360apps/">asari360jp/360apps/</a>
   </div>
 </div>
 
